syntax = "proto3";

option go_package = "v1";

option java_package = "io.stackrox.proto.api.v1";

import weak "google/api/annotations.proto";
import "api/v1/common.proto";
import "api/v1/empty.proto";
import "storage/resource_collection.proto";
import "storage/deployment.proto";
import "api/v1/search_service.proto";

package v1;

message GetCollectionRequest {
    message Options {
        bool with_matches = 1;
    }
    string id = 1;
    Options options = 2;
}

message GetCollectionResponse {
    storage.ResourceCollection collection = 1;
    repeated storage.ListDeployment deployments = 2;
}

message CreateCollectionRequest {
    string name = 1;
    string description = 2;
    repeated storage.ResourceSelector resource_selectors = 3;
    repeated string embedded_collection_ids = 4;
}

message CreateCollectionResponse {
    storage.ResourceCollection collection = 1;
}

message ListCollectionsRequest {
    RawQuery query = 1;
}

message ListCollectionsResponse {
    repeated storage.ResourceCollection collections = 1;
}

service CollectionService {

    rpc GetCollection (GetCollectionRequest) returns (GetCollectionResponse) {
        option (google.api.http) = {
            get: "/v1/collections/{id}"
        };
    }

    rpc CreateCollection (CreateCollectionRequest) returns (CreateCollectionResponse) {
        option (google.api.http) = {
            post: "/v1/collections"
            body: "*"
        };
    }

    rpc ListCollections (ListCollectionsRequest) returns (ListCollectionsResponse) {
        option (google.api.http) = {
            get: "/v1/collections"
        };
    }

    rpc DeleteCollection (ResourceByID) returns (Empty) {
        option (google.api.http) = {
            delete: "/v1/collections/{id}"
        };
    }
}
