edition = "2023";  // successor to proto2 and proto3

package sensor;

import "google/protobuf/timestamp.proto";
import "internalapi/central/sensor_events.proto";
import "storage/cluster.proto";
import "storage/deployment.proto";
import "storage/namespace_metadata.proto";
import "storage/policy.proto";
import "google/protobuf/go_features.proto";

option go_package = "./internalapi/sensor;sensor";
option features.(pb.go).api_level = API_HYBRID;
option features.field_presence = IMPLICIT;
option features.enum_type = OPEN;
// `packed=false` needs to be transformed to field-level repeated_field_encoding
// features in Editions syntax
option features.json_format = ALLOW;
option features.utf8_validation = VERIFY;

message AdmissionControlSettings {
  storage.DynamicClusterConfig cluster_config = 1 [lazy = true];
  storage.PolicyList enforced_deploy_time_policies = 2 [lazy = true];
  google.protobuf.Timestamp timestamp = 3 [lazy = true];
  string cache_version = 4;

  string central_endpoint = 5;

  string cluster_id = 6;
  storage.PolicyList runtime_policies = 7 [lazy = true];
}

message AdmissionControlAlerts {
  repeated central.AlertResults alert_results = 1;
}

message AdmCtrlUpdateResourceRequest {
  message ResourcesSynced {}

  central.ResourceAction action = 1;
  oneof resource {
    storage.Deployment deployment = 2 [lazy = true];
    storage.Pod pod = 3 [lazy = true];
    storage.NamespaceMetadata namespace = 4 [lazy = true];

    ResourcesSynced synced = 5;
  }
}
